# voicenote

./: .gitmodules  CMakeLists.txt  README.md  clickable.yaml  manifest.json.in  voicenote-button.desktop.in  voicenote.apparmor  voicenote.desktop.in
qml/: Main.qml
src/: main.cpp  transcriber.cpp  transcriber.h
